Navbar,Header and Download Section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <link href="assets/css/bootstrap.min.css" rel="stylesheet">
         <!-- FontAwesome -->
         <link href="assets/css/font-awesome.css" rel="stylesheet">
+        <!-- GoogleFonts -->
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
         <!-- Custom CSS -->
         <link href="assets/css/style.css" rel="stylesheet">
 
@@ -22,13 +24,89 @@
         <![endif]-->
     </head>
     <body>
-        <h1>Hello, world!</h1>
 
-        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-        <script src="assets/js/jquery.min.js"></script>
-        <!-- Include all compiled plugins (below), or include individual files as needed -->
-        <script src="assets/js/bootstrap.min.js"></script>
-        <!-- Plugins.JS -->
-        <script src="assets/js/plugins.js"></script>
+    <!-- Start Of NavBar -->
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">
+                    <img alt="LOGO" src="assets/img/logo.png">
+                </a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Downloads</a></li>
+                    <li><a href="#">Plans</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#"><i class="fa fa-search"></i></a></li>
+                </ul>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+    </nav>
+    <!-- End Of NavBar -->
+    <!-- Start Of Header -->
+    <header id="header">
+        <div class="overlay">
+            <div class="container">
+                <div class="row text-center">
+                    <h1 class="text-uppercase">free psd web template</h1>
+                    <p class="lead text-capitalize">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium architecto asperiores deleniti harum iste libero nemo nulla perferendis placeat provident. Aperiam dolores et minus molestias neque nihil non optio sit.</p>
+                    <button class="btn btn-custome text-capitalize"><i class="fa fa-download"></i> download</button>
+                </div>
+            </div>
+        </div>
+        <!-- /overlay -->
+    </header>
+    <!-- End Of Header -->
+
+    <!-- Start Of Download -->
+    <section id="download">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h1 class="text-uppercase">just download it</h1>
+                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore iure odio, officia sit tempore velit vero. Aperiam commodi consequuntur, est exercitationem laboriosam libero maiores, maxime praesentium quos repudiandae veritatis vitae.</p>
+                    <ul class="list-unstyled">
+                        <li>Duis aute irure dolor in reprehenderit in voluptate. </li>
+                        <li>Excepteur sint occaecat cupidatat non proident. </li>
+                        <li>Sed ut perspiciatis unde omnis iste natus error sit voluptatem. </li>
+                    </ul>
+                    <button class="btn btn-custome text-capitalize">read more</button>
+                    <img src="assets/img/macbook.png" alt="MacBook" class="img img-responsive visible-md visible-lg">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Of Download -->
+
+    <!-- Start Of Features -->
+    <section id="features">
+        <div class="container">
+            <div class="row">
+                <
+                <div class="col-md-4">
+
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Of Features -->
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="assets/js/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="assets/js/bootstrap.min.js"></script>
+    <!-- Plugins.JS -->
+    <script src="assets/js/plugins.js"></script>
     </body>
 </html>
