Features and Plans Section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!-- FontAwesome -->
         <link href="assets/css/font-awesome.css" rel="stylesheet">
         <!-- GoogleFonts -->
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
         <!-- Custom CSS -->
         <link href="assets/css/style.css" rel="stylesheet">
 
@@ -93,14 +93,126 @@
     <section id="features">
         <div class="container">
             <div class="row">
-                <
+                <!-- Feature -->
                 <div class="col-md-4">
-
+                    <div class="feat">
+                        <i class="fa fa-3x fa-desktop"></i>
+                        <div class="description">
+                            <h3 class="text-uppercase">high resolution</h3>
+                            <p>Lorem ipsum dolor sit amet,  adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                        </div>
+                    </div>
                 </div>
+                <!-- Feature -->
+                <!-- Feature -->
+                <div class="col-md-4">
+                    <div class="feat">
+                        <i class="fa fa-3x fa-camera-retro"></i>
+                        <div class="description">
+                            <h3 class="text-uppercase">photography</h3>
+                            <p>Lorem ipsum dolor sit amet,  adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Feature -->
+                <!-- Feature -->
+                <div class="col-md-4">
+                    <div class="feat">
+                        <i class="fa fa-3x fa-files-o"></i>
+                        <div class="description">
+                            <h3 class="text-uppercase">editable players</h3>
+                            <p>Lorem ipsum dolor sit amet,  adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Feature -->
+                <!-- Feature -->
+                <div class="col-md-4">
+                    <div class="feat">
+                        <i class="fa fa-3x fa-mobile"></i>
+                        <div class="description">
+                            <h3 class="text-uppercase">24/7 support</h3>
+                            <p>Lorem ipsum dolor sit amet,  adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Feature -->
+                <!-- Feature -->
+                <div class="col-md-4">
+                    <div class="feat">
+                        <i class="fa fa-3x fa-magic"></i>
+                        <div class="description">
+                            <h3 class="text-uppercase">powerfull theme</h3>
+                            <p>Lorem ipsum dolor sit amet,  adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Feature -->
+                <!-- Feature -->
+                <div class="col-md-4">
+                    <div class="feat">
+                        <i class="fa fa-3x fa-share-alt"></i>
+                        <div class="description">
+                            <h3 class="text-uppercase">ttv</h3>
+                            <p>Lorem ipsum dolor sit amet,  adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Feature -->
             </div>
         </div>
     </section>
     <!-- End Of Features -->
+
+    <!-- Start Of Plans -->
+    <section id="plans">
+        <div class="container text-center">
+            <h1 class="text-uppercase">plans</h1>
+            <p class="lead">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            </p>
+            <div class="row">
+                <!-- Plan -->
+                <div class="col-md-4">
+                    <div class="plan">
+                        <h4 class="text-uppercase">basic plan</h4>
+                        <p class="price"><span><i>$</i>25</span>/mon</p>
+                        <p>Lorem ipsum dolor sit</p>
+                    </div>
+                </div>
+                <!-- Plan -->
+                <!-- Plan -->
+                <div class="col-md-4">
+                    <div class="plan">
+                        <h4 class="text-uppercase">professional plan</h4>
+                        <p class="price"><span><i>$</i>25</span>/mon</p>
+                        <p>Lorem ipsum dolor sit</p>
+                    </div>
+                </div>
+                <!-- Plan -->
+                <!-- Plan -->
+                <div class="col-md-4">
+                    <div class="plan">
+                        <h4 class="text-uppercase">professional+ plan</h4>
+                        <p class="price"><span><i>$</i>25</span>/mon</p>
+                        <p>Lorem ipsum dolor sit</p>
+                    </div>
+                </div>
+                <!-- Plan -->
+            </div>
+            <div class="contact">
+                <i class="fa fa-4x fa-question"></i>
+                <h3 class="text-uppercase">got questions?</h3>
+                <p class="lead text-capitalize">contact our customer support team if you have any further questions. we are here to help you out!</p>
+                <ul class="list-inline">
+                    <li><i class="fa fa-envelope"></i> support@free.com</li>
+                    <li><i class="fa fa-phone"></i> +48 504 176 933</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <!-- End Of Plans -->
+
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="assets/js/jquery.min.js"></script>
