Footer and Header Background

--- a/index.html
+++ b/index.html
@@ -213,6 +213,21 @@
     </section>
     <!-- End Of Plans -->
 
+    <!-- Start Of Free -->
+    <section id="free" class="text-center">
+        <div class="container">
+            <h1 class="text-uppercase">download this template for free</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci alias atque commodi ipsum itaque quam quisquam sit. Consectetur dolorum ducimus eos et fugit possimus, qui quis quo velit veritatis, voluptas?</p>
+            <button class="btn btn-custome"><i class="fa fa-download"></i> Download</button>
+        </div>
+    </section>
+    <!-- End Of Free -->
+
+    <!-- Start Of Footer -->
+    <footer id="footer">
+
+    </footer>
+    <!-- End Of Footer -->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="assets/js/jquery.min.js"></script>
