--- a/index.html
+++ b/index.html
@@ -164,6 +164,106 @@
     </section>
     <!-- End Of Features -->
 
+    <!-- Start Of Projects -->
+    <section id="projects">
+        <div class="container">
+            <h1 class="text-center text-uppercase">projects</h1>
+            <ul class="menu list-inline">
+                <li class="selected">All</li>
+                <li>UI/UX</li>
+                <li>3D</li>
+                <li>Graphic Design</li>
+            </ul>
+            <div class="row">
+                <!-- Item -->
+                <div class="col-md-4">
+                    <div class="item">
+                        <div class="overlay">
+                            <i class="fa fa-2x fa-search-plus"></i>
+                        </div>
+                        <span class="like">
+                            <i class="fa fa-heart"></i> 23
+                            <i class="fa fa-download"></i> 65
+                        </span>
+                        <img src="assets/img/item.jpg" alt="Item">
+                    </div>
+                </div>
+                <!-- Item -->
+                <!-- Item -->
+                <div class="col-md-4">
+                    <div class="item">
+                        <div class="overlay">
+                            <i class="fa fa-2x fa-search-plus"></i>
+                        </div>
+                        <span class="like">
+                            <i class="fa fa-heart"></i> 23
+                            <i class="fa fa-download"></i> 65
+                        </span>
+                        <img src="assets/img/item2.jpg" alt="Item">
+                    </div>
+                </div>
+                <!-- Item -->
+                <!-- Item -->
+                <div class="col-md-4">
+                    <div class="item">
+                        <div class="overlay">
+                            <i class="fa fa-2x fa-search-plus"></i>
+                        </div>
+                        <span class="like">
+                            <i class="fa fa-heart"></i> 23
+                            <i class="fa fa-download"></i> 65
+                        </span>
+                        <img src="assets/img/item3.jpg" alt="Item">
+                    </div>
+                </div>
+                <!-- Item -->
+                <!-- Item -->
+                <div class="col-md-4">
+                    <div class="item">
+                        <div class="overlay">
+                            <i class="fa fa-2x fa-search-plus"></i>
+                        </div>
+                        <span class="like">
+                            <i class="fa fa-heart"></i> 23
+                            <i class="fa fa-download"></i> 65
+                        </span>
+                        <img src="assets/img/item4.jpg" alt="Item">
+                    </div>
+                </div>
+                <!-- Item -->
+                <!-- Item -->
+                <div class="col-md-4">
+                    <div class="item">
+                        <div class="overlay">
+                            <i class="fa fa-2x fa-search-plus"></i>
+                        </div>
+                        <span class="like">
+                            <i class="fa fa-heart"></i> 23
+                            <i class="fa fa-download"></i> 65
+                        </span>
+                        <img src="assets/img/item5.jpg" alt="Item">
+                    </div>
+                </div>
+                <!-- Item -->
+                <!-- Item -->
+                <div class="col-md-4">
+                    <div class="item">
+                        <div class="overlay">
+                            <i class="fa fa-2x fa-search-plus"></i>
+                        </div>
+                        <span class="like">
+                            <i class="fa fa-heart"></i> 23
+                            <i class="fa fa-download"></i> 65
+                        </span>
+                        <img src="assets/img/item6.jpg" alt="Item">
+                    </div>
+                </div>
+                <!-- Item -->
+            </div>
+        </div>
+    </section>
+    <!-- End Of Projects -->
+
     <!-- Start Of Plans -->
     <section id="plans">
         <div class="container text-center">
