--- a/index.html
+++ b/index.html
@@ -313,6 +313,60 @@
     </section>
     <!-- End Of Plans -->
 
+    <!-- Start Of Testimonials -->
+    <section id="testimonials" class="text-center">
+        <div class="overlay">
+            <div class="container">
+                <h1 class="text-uppercase">What our clients say</h1>
+                <!-- Start Of Carousel -->
+                <div id="carousel_testimonials" class="carousel slide" data-ride="carousel">
+
+                    <div class="carousel-inner">
+
+                        <div class="item">
+                            <p class="lead">Transition animations not supported in Internet Explorer 8 &amp; 9 Bootstrap exclusively uses CSS3 for its animations, but Internet Explorer 8 &amp; 9 don't support the necessary CSS properties. Thus, there are no slide transition animations when using these browsers. We have intentionally decided not to include jQuery-based fallbacks for the transitions.</p>
+                            <span>Arfaoui Hamouda</span>
+                        </div>
+
+                        <div class="item">
+                            <p class="lead">Transition animations not supported in Internet Explorer 8 &amp; 9 Bootstrap exclusively uses CSS3 for its animations, but Internet Explorer 8 &amp; 9 don't support the necessary CSS properties. Thus, there are no slide transition animations when using these browsers. We have intentionally decided not to include jQuery-based fallbacks for the transitions.</p>
+                            <span>Arfaoui Hamouda</span>
+                        </div>
+
+                        <div class="item">
+                            <p class="lead">Transition animations not supported in Internet Explorer 8 &amp; 9 Bootstrap exclusively uses CSS3 for its animations, but Internet Explorer 8 &amp; 9 don't support the necessary CSS properties. Thus, there are no slide transition animations when using these browsers. We have intentionally decided not to include jQuery-based fallbacks for the transitions.</p>
+                            <span>Arfaoui Hamouda</span>
+                        </div>
+
+                        <div class="item active">
+                            <p class="lead">Transition animations not supported in Internet Explorer 8 &amp; 9 Bootstrap exclusively uses CSS3 for its animations, but Internet Explorer 8 &amp; 9 don't support the necessary CSS properties. Thus, there are no slide transition animations when using these browsers. We have intentionally decided not to include jQuery-based fallbacks for the transitions.</p>
+                            <span>Arfaoui Hamouda</span>
+                        </div>
+
+                    </div>
+
+                    <ol class="carousel-indicators">
+                        <li data-target="#carousel_testimonials" data-slide-to="0" class="">
+                            <img src="assets/img/avatar_01.jpg" width="74" height="74" alt="Osama">
+                        </li>
+                        <li data-target="#carousel_testimonials" data-slide-to="1" class="">
+                            <img src="assets/img/avatar_02.jpg" width="74" height="74" alt="Hassan">
+                        </li>
+                        <li data-target="#carousel_testimonials" data-slide-to="2" class="">
+                            <img src="assets/img/avatar_03.jpg" width="74" height="74" alt="Hind">
+                        </li>
+                        <li data-target="#carousel_testimonials" data-slide-to="3" class="active">
+                            <img src="assets/img/avatar_04.jpg" width="74" height="74" alt="Zahra">
+                        </li>
+                    </ol>
+
+                </div>
+                <!-- End Of Carousel -->
+            </div>
+        </div>
+    </section>
+    <!-- End Of Testimonials -->
+
     <!-- Start Of Free -->
     <section id="free" class="text-center">
         <div class="container">
