mixit up plugin

--- a/index.html
+++ b/index.html
@@ -169,96 +169,98 @@
         <div class="container">
             <h1 class="text-center text-uppercase">projects</h1>
             <ul class="menu list-inline">
-                <li class="selected">All</li>
-                <li>UI/UX</li>
-                <li>3D</li>
-                <li>Graphic Design</li>
+                <li class="filter selected active" data-filter="all">All</li>
+                <li class="filter" data-filter=".ux-ui">UI/UX</li>
+                <li class="filter" data-filter=".md">3D</li>
+                <li class="filter" data-filter=".graphic-design">Graphic Design</li>
             </ul>
-            <div class="row">
-                <!-- Item -->
-                <div class="col-md-4">
-                    <div class="item">
-                        <div class="overlay">
-                            <i class="fa fa-2x fa-search-plus"></i>
-                        </div>
-                        <span class="like">
+            <div id="plugin">
+                <div class="row">
+                    <!-- Item -->
+                    <div class="col-md-4 mix md">
+                        <div class="item">
+                            <div class="overlay">
+                                <i class="fa fa-2x fa-search-plus"></i>
+                            </div>
+                            <span class="like">
                             <i class="fa fa-heart"></i> 23
                             <i class="fa fa-download"></i> 65
                         </span>
-                        <img src="assets/img/item.jpg" alt="Item">
-                    </div>
-                </div>
-                <!-- Item -->
-                <!-- Item -->
-                <div class="col-md-4">
-                    <div class="item">
-                        <div class="overlay">
-                            <i class="fa fa-2x fa-search-plus"></i>
+                            <img src="assets/img/item.jpg" alt="Item">
                         </div>
-                        <span class="like">
+                    </div>
+                    <!-- Item -->
+                    <!-- Item -->
+                    <div class="col-md-4 mix graphic-design">
+                        <div class="item">
+                            <div class="overlay">
+                                <i class="fa fa-2x fa-search-plus"></i>
+                            </div>
+                            <span class="like">
                             <i class="fa fa-heart"></i> 23
                             <i class="fa fa-download"></i> 65
                         </span>
-                        <img src="assets/img/item2.jpg" alt="Item">
-                    </div>
-                </div>
-                <!-- Item -->
-                <!-- Item -->
-                <div class="col-md-4">
-                    <div class="item">
-                        <div class="overlay">
-                            <i class="fa fa-2x fa-search-plus"></i>
+                            <img src="assets/img/item2.jpg" alt="Item">
                         </div>
-                        <span class="like">
+                    </div>
+                    <!-- Item -->
+                    <!-- Item -->
+                    <div class="col-md-4 mix ux-ui">
+                        <div class="item">
+                            <div class="overlay">
+                                <i class="fa fa-2x fa-search-plus"></i>
+                            </div>
+                            <span class="like">
                             <i class="fa fa-heart"></i> 23
                             <i class="fa fa-download"></i> 65
                         </span>
-                        <img src="assets/img/item3.jpg" alt="Item">
-                    </div>
-                </div>
-                <!-- Item -->
-                <!-- Item -->
-                <div class="col-md-4">
-                    <div class="item">
-                        <div class="overlay">
-                            <i class="fa fa-2x fa-search-plus"></i>
+                            <img src="assets/img/item3.jpg" alt="Item">
                         </div>
-                        <span class="like">
+                    </div>
+                    <!-- Item -->
+                    <!-- Item -->
+                    <div class="col-md-4 mix graphic-design">
+                        <div class="item">
+                            <div class="overlay">
+                                <i class="fa fa-2x fa-search-plus"></i>
+                            </div>
+                            <span class="like">
                             <i class="fa fa-heart"></i> 23
                             <i class="fa fa-download"></i> 65
                         </span>
-                        <img src="assets/img/item4.jpg" alt="Item">
-                    </div>
-                </div>
-                <!-- Item -->
-                <!-- Item -->
-                <div class="col-md-4">
-                    <div class="item">
-                        <div class="overlay">
-                            <i class="fa fa-2x fa-search-plus"></i>
+                            <img src="assets/img/item4.jpg" alt="Item">
                         </div>
-                        <span class="like">
+                    </div>
+                    <!-- Item -->
+                    <!-- Item -->
+                    <div class="col-md-4 mix ux-ui">
+                        <div class="item">
+                            <div class="overlay">
+                                <i class="fa fa-2x fa-search-plus"></i>
+                            </div>
+                            <span class="like">
                             <i class="fa fa-heart"></i> 23
                             <i class="fa fa-download"></i> 65
                         </span>
-                        <img src="assets/img/item5.jpg" alt="Item">
-                    </div>
-                </div>
-                <!-- Item -->
-                <!-- Item -->
-                <div class="col-md-4">
-                    <div class="item">
-                        <div class="overlay">
-                            <i class="fa fa-2x fa-search-plus"></i>
+                            <img src="assets/img/item5.jpg" alt="Item">
                         </div>
-                        <span class="like">
+                    </div>
+                    <!-- Item -->
+                    <!-- Item -->
+                    <div class="col-md-4 mix md">
+                        <div class="item">
+                            <div class="overlay">
+                                <i class="fa fa-2x fa-search-plus"></i>
+                            </div>
+                            <span class="like">
                             <i class="fa fa-heart"></i> 23
                             <i class="fa fa-download"></i> 65
                         </span>
-                        <img src="assets/img/item6.jpg" alt="Item">
+                            <img src="assets/img/item6.jpg" alt="Item">
+                        </div>
                     </div>
+                    <!-- Item -->
                 </div>
-                <!-- Item -->
             </div>
         </div>
     </section>
@@ -387,6 +389,8 @@
     <script src="assets/js/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="assets/js/bootstrap.min.js"></script>
+    <!-- MixitUp -->
+    <script src="assets/js/mixitup.min.js"></script>
     <!-- Plugins.JS -->
     <script src="assets/js/plugins.js"></script>
     </body>
