Magnific Popup Plugin

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <link href="assets/css/bootstrap.min.css" rel="stylesheet">
         <!-- FontAwesome -->
         <link href="assets/css/font-awesome.css" rel="stylesheet">
+        <!-- Magnific Popup core CSS file -->
+        <link rel="stylesheet" href="assets/css/magnific-popup.css">
         <!-- GoogleFonts -->
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
         <!-- Custom CSS -->
@@ -178,7 +180,7 @@
                 <div class="row">
                     <!-- Item -->
                     <div class="col-md-4 mix md">
-                        <div class="item">
+                        <div class="item" href="assets/img/item.jpg">
                             <div class="overlay">
                                 <i class="fa fa-2x fa-search-plus"></i>
                             </div>
@@ -192,7 +194,7 @@
                     <!-- Item -->
                     <!-- Item -->
                     <div class="col-md-4 mix graphic-design">
-                        <div class="item">
+                        <div class="item" href="assets/img/item2.jpg">
                             <div class="overlay">
                                 <i class="fa fa-2x fa-search-plus"></i>
                             </div>
@@ -206,7 +208,7 @@
                     <!-- Item -->
                     <!-- Item -->
                     <div class="col-md-4 mix ux-ui">
-                        <div class="item">
+                        <div class="item" href="assets/img/item3.jpg">
                             <div class="overlay">
                                 <i class="fa fa-2x fa-search-plus"></i>
                             </div>
@@ -220,7 +222,7 @@
                     <!-- Item -->
                     <!-- Item -->
                     <div class="col-md-4 mix graphic-design">
-                        <div class="item">
+                        <div class="item" href="assets/img/item4.jpg">
                             <div class="overlay">
                                 <i class="fa fa-2x fa-search-plus"></i>
                             </div>
@@ -234,7 +236,7 @@
                     <!-- Item -->
                     <!-- Item -->
                     <div class="col-md-4 mix ux-ui">
-                        <div class="item">
+                        <div class="item" href="assets/img/item5.jpg">
                             <div class="overlay">
                                 <i class="fa fa-2x fa-search-plus"></i>
                             </div>
@@ -248,7 +250,7 @@
                     <!-- Item -->
                     <!-- Item -->
                     <div class="col-md-4 mix md">
-                        <div class="item">
+                        <div class="item" href="assets/img/item6.jpg">
                             <div class="overlay">
                                 <i class="fa fa-2x fa-search-plus"></i>
                             </div>
@@ -387,8 +389,10 @@
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="assets/js/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="assets/js/bootstrap.min.js"></script>
+    <!-- jQuery 1.7.2+ or Zepto.js 1.0+ -->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <!-- Magnific Popup core JS file -->
+    <script src="assets/js/jquery.magnific-popup.min.js"></script>
     <!-- MixitUp -->
     <script src="assets/js/mixitup.min.js"></script>
     <!-- Plugins.JS -->
